# agents-engineering-team

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: backend-architect.md  mobile-architect.md
docs/: local.md  publishing.md
skills/database-firestore/: SKILL.md
skills/database-firestore/references/: queries.md  security-rules.md
skills/flutter/assets/: analysis_options.yaml
skills/flutter/references/: routing.md
skills/gcp-cloud-firebase/: SKILL.md
skills/gcp-cloud-firebase/references/: cloud-run.md  hosting.md  storage.md
skills/mermaid/: SKILL.md
skills/mermaid/references/: flowcharts.md
skills/typescript/assets/: tsconfig.strict.json
skills/typescript/references/: architecture.md  testing.md  type-patterns.md
src/engineering_team/: __init__.py  cli.py
src/engineering_team/commands/: __init__.py  init.py  list.py  status.py  sync.py
src/engineering_team/core/: __init__.py  config.py  copier.py  database.py  registry.py  schema.py
src/engineering_team/data/agents/: code-reviewer.md  senior-backend-developer.md  senior-mobile-developer.md  unit-test-engineer.md
src/engineering_team/data/skills/frameworks/flutter/: SKILL.md
src/engineering_team/data/skills/languages/python/: SKILL.md
src/engineering_team/data/skills/languages/typescript/: SKILL.md
src/engineering_team/data/skills/product/project-planning/: SKILL.md
src/engineering_team/data/skills/test-tools/typescript-unit-testing/: SKILL.md
src/engineering_team/ui/: __init__.py  prompts.py
tests/: __init__.py  test_database.py
(+24 files in other folders)
