[project]
name = "engineering-team"
version = "0.1.0"
description = "CLI tool to configure Claude Code agents and skills for your projects"
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
keywords = ["claude", "ai", "agents", "cli", "developer-tools"]
authors = [
    { name = "Engineering Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "typer>=0.9.0",
    "questionary>=2.0.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "rich>=13.0.0",
]

[project.scripts]
engineering-team = "engineering_team.cli:app"

[project.urls]
Homepage = "https://github.com/your-org/engineering-team"
Documentation = "https://github.com/your-org/engineering-team#readme"
Issues = "https://github.com/your-org/engineering-team/issues"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/engineering_team"]
